# rag-llmsmith-fastapi

./: .env.template  .gitignore  Makefile  README.md  insert-sample-data.py  pyproject.toml  requirements-dev.txt  requirements.txt
rag_llmsmith_fastapi/: __init__.py  main.py
rag_llmsmith_fastapi/chat/: __init__.py  api.py  service.py
rag_llmsmith_fastapi/config/: __init__.py  settings.py
rag_llmsmith_fastapi/core/: log.py
