[project]
version = "0.1.0"

[tool.poetry]
name = "rag-llmsmith-fastapi"
version = "0.1.0"
description = ""
authors = ["Dheeraj Gopinath <dheeraj.gopinath@ampcustech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
llmsmith = {extras = ["cohere", "openai", "qdrant"], version = "^0.5.0"}
fastapi = "^0.111.0"
fastembed = "^0.2.7"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
